progress: for home page, added animation on load, ready for QA

--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -277,9 +277,8 @@
         console.log('onLoadAnimation');
         setTimeout(() => {
           document.querySelector('.db-site-loader').classList.remove('--show');
-          // setTimeout(() => {
-            document.querySelector('.db-section--banner').classList.add('--animate-now');
-          // }, 1000);
+          document.querySelector('.db-section--banner').classList.add('--animate-now');
+          document.querySelector('.db-header').classList.add('--animate-now');
         }, 3000);
       },
 
