--- a/snippets/widget--marketplace.liquid
+++ b/snippets/widget--marketplace.liquid
@@ -1,5 +1,7 @@
 <div class="db-widget-item --marketplace">
-  <h5>
-    MARKETPLACE
-  </h5>
+  <div class="db-widget-box">
+    <h5>
+      MARKETPLACE
+    </h5>
+  </div>
 </div>
