--- a/snippets/widget--music-player.liquid
+++ b/snippets/widget--music-player.liquid
@@ -1,30 +1,32 @@
 <div class="db-widget-item --music-player">
-  <div class="db-inner-row">
-    <div class="db-inner-col">
-      <svg class="svg-icon-play db-svg"
-        width="62"
-        height="62"
-        viewBox="0 0 62 62"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg">
-        <circle id="circle_01"
-          cx="31"
-          cy="31"
-          r="30"
-          stroke="#B1FF29">
-        </circle>
-        <path id="path_01"
-          d="M41 31C41.0006 31.2612 40.9334 31.5181 40.8047 31.7457C40.6761 31.9733 40.4905 32.1639 40.2659 32.299L26.3491 40.7736C26.1145 40.9166 25.8457 40.9947 25.5706 40.9997C25.2956 41.0048 25.0241 40.9367 24.7843 40.8024C24.5468 40.6702 24.349 40.4775 24.2111 40.2439C24.0733 40.0104 24.0004 39.7445 24 39.4736V22.5264C24.0004 22.2555 24.0733 21.9896 24.2111 21.7561C24.349 21.5225 24.5468 21.3298 24.7843 21.1976C25.0241 21.0633 25.2956 20.9952 25.5706 21.0003C25.8457 21.0053 26.1145 21.0834 26.3491 21.2264L40.2659 29.701C40.4905 29.8361 40.6761 30.0267 40.8047 30.2543C40.9334 30.4819 41.0006 30.7388 41 31Z"
-          fill="#B1FF29">
-        </path>
-      </svg>
-    </div>
-    <div class="db-inner-col">
-      <span class="music-title">The After, After-Life ( Feat. VampSquad & Wolfden) The After, After-Life ( Feat. VampSquad & Wolfden) The After, After-Life ( Feat. VampSquad & Wolfden)</span>
-      <span class="music-artist">Sherdan V-44, Jutom</span>
-    </div>
-    <div class="db-inner-col">
-      <span class="music-duration">3:11</span>
+  <div class="db-widget-box">
+    <div class="db-inner-row">
+      <div class="db-inner-col">
+        <svg class="svg-icon-play db-svg"
+          width="62"
+          height="62"
+          viewBox="0 0 62 62"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <circle id="circle_01"
+            cx="31"
+            cy="31"
+            r="30"
+            stroke="#B1FF29">
+          </circle>
+          <path id="path_01"
+            d="M41 31C41.0006 31.2612 40.9334 31.5181 40.8047 31.7457C40.6761 31.9733 40.4905 32.1639 40.2659 32.299L26.3491 40.7736C26.1145 40.9166 25.8457 40.9947 25.5706 40.9997C25.2956 41.0048 25.0241 40.9367 24.7843 40.8024C24.5468 40.6702 24.349 40.4775 24.2111 40.2439C24.0733 40.0104 24.0004 39.7445 24 39.4736V22.5264C24.0004 22.2555 24.0733 21.9896 24.2111 21.7561C24.349 21.5225 24.5468 21.3298 24.7843 21.1976C25.0241 21.0633 25.2956 20.9952 25.5706 21.0003C25.8457 21.0053 26.1145 21.0834 26.3491 21.2264L40.2659 29.701C40.4905 29.8361 40.6761 30.0267 40.8047 30.2543C40.9334 30.4819 41.0006 30.7388 41 31Z"
+            fill="#B1FF29">
+          </path>
+        </svg>
+      </div>
+      <div class="db-inner-col">
+        <span class="music-title">The After, After-Life ( Feat. VampSquad & Wolfden) The After, After-Life ( Feat. VampSquad & Wolfden) The After, After-Life ( Feat. VampSquad & Wolfden)</span>
+        <span class="music-artist">Sherdan V-44, Jutom</span>
+      </div>
+      <div class="db-inner-col">
+        <span class="music-duration">3:11</span>
+      </div>
     </div>
   </div>
 </div>
