--- a/snippets/widget--roadmap.liquid
+++ b/snippets/widget--roadmap.liquid
@@ -1,8 +1,10 @@
 <div class="db-widget-item --roadmap">
-  <h5>
-    ROADMAP
-  </h5>
-  <p>
-    12 Month Roadmap Milestones
-  </p>
+  <div class="db-widget-box">
+    <h5>
+      ROADMAP
+    </h5>
+    <p>
+      12 Month Roadmap Milestones
+    </p>
+  </div>
 </div>
