--- a/snippets/widget--year-2069.liquid
+++ b/snippets/widget--year-2069.liquid
@@ -1,18 +1,20 @@
 <div class="db-widget-item --year-2069">
-  <div class="year-wrap">
-    <span>YEAR</span>
-    <span>2069</span>
-  </div>
-  <p>
-    undead rock the world
-  </p>
-  <a class="db-btn--explore-the-world db-btn"
-    title=""
-    href="">
-    <div class="db-btn-wrap">
-      <div class="db-btn-label">
-        Explore The World
-      </div>
+  <div class="db-widget-box">
+    <div class="year-wrap">
+      <span>YEAR</span>
+      <span>2069</span>
     </div>
-  </a>
+    <p>
+      undead rock the world
+    </p>
+    <a class="db-btn--explore-the-world db-btn"
+      title=""
+      href="">
+      <div class="db-btn-wrap">
+        <div class="db-btn-label">
+          Explore The World
+        </div>
+      </div>
+    </a>
+  </div>
 </div>
