--- a/snippets/widget--discover-collect.liquid
+++ b/snippets/widget--discover-collect.liquid
@@ -1,5 +1,7 @@
 <div class="db-widget-item --discover-collect">
-  <h5>
-    Discover, Collect and Sell Extra
-  </h5>
+  <div class="db-widget-box">
+    <h5>
+      Discover, Collect and Sell Extra
+    </h5>
+  </div>
 </div>
