--- a/styles/db-theme/_animation.scss
+++ b/styles/db-theme/_animation.scss
@@ -10,11 +10,62 @@
   }
 }
 
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes zoom-in {
+  from {
+    scale: 1.0;
+  }
+  to {
+    scale: 1.1;
+  }
+}
+
+@keyframes zoom-out {
+  from {
+    scale: 1.1;
+  }
+  to {
+    scale: 1.0;
+  }
+}
+
 @keyframes running-text {
   from {
     translate: 100% 0%;
   }
   to {
     translate: -100% 0%;
+  }
+}
+
+@keyframes glitchTop {
+  2%, 64% {
+    transform: translate(2px,-2px);
+  }
+  4%, 60% {
+    transform: translate(-2px,2px);
+  }
+  62% {
+    transform: translate(13px,-1px) skew(-13deg);
+  }
+}
+
+@keyframes glitchBotom {
+  2%, 64% {
+    transform: translate(-2px,0);
+  }
+  4%, 60% {
+    transform: translate(-2px,0);
+  }
+  62% {
+    transform: translate(-22px,5px) skew(21deg);
   }
 }
