--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -3,24 +3,39 @@
   .db-site-loader {
     position: fixed;
     z-index: 999999;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    translate: 0 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #0E0914;
-    visibility: hidden;
-    opacity: 0;
+    // visibility: hidden;
+    // opacity: 0;
+    // visibility: visible;
+    // opacity: 1;
     width: 100%;
     height: 100vh;
+    transition:
+      translate 700ms cubic-bezier(0.86, 0, 0.07, 1) 0s;
 
     .svg-icon-loader {
       display: block;
       width: 100px;
       height: 100px;
+
+      @media only screen and (max-width: 768px) {
+        width: 60px;
+        height: 60px;
+      }
     }
 
     &.--show {
-      visibility: visible;
-      opacity: 1;
+      translate: 0 0;
+      // visibility: visible;
+      // opacity: 1;
     }
   }
 
@@ -52,6 +67,10 @@
         height: 555px;
       }
 
+      @media only screen and (max-width: 480px) {
+        height: 645px;
+      }
+
       .db-bg-video {
         position: absolute;
         z-index: 1;
@@ -67,9 +86,14 @@
     .db-container {
       position: relative;
       z-index: 2;
+      scale: 1.25;
       display: block;
+      opacity: 0;
       height: 100%;
       padding: 125px 0 0;
+      transition:
+        opacity 700ms cubic-bezier(0.86, 0, 0.07, 1) 0s,
+        scale 700ms cubic-bezier(0.86, 0, 0.07, 1) 0s;
 
       .db-row {
         justify-content: space-between;
@@ -106,6 +130,10 @@
               padding: 36px 0 0;
             }
 
+            @media only screen and (max-width: 480px) {
+              height: 520px;
+            }
+
             h1 {
               margin: 0 0 50px;
               pointer-events: none;
@@ -119,30 +147,6 @@
                 font-style: normal;
                 font-weight: 700;
                 line-height: 1.1em;
-
-                @keyframes glitchTop {
-                  2%, 64% {
-                    transform: translate(2px,-2px);
-                  }
-                  4%,60% {
-                    transform: translate(-2px,2px);
-                  }
-                  62% {
-                    transform: translate(13px,-1px) skew(-13deg);
-                  }
-                }
-
-                @keyframes glitchBotom {
-                  2%, 64% {
-                    transform: translate(-2px,0);
-                  }
-                  4%, 60% {
-                    transform: translate(-2px,0);
-                  }
-                  62% {
-                    transform: translate(-22px,5px) skew(21deg);
-                  }
-                }
 
                 &:nth-of-type(1) {
                   color: $whiteColor;
@@ -252,7 +256,7 @@
               margin: 0 0 266px;
 
               @media only screen and (max-width: 1440px) {
-                margin: 0 0 100px;
+                margin: 0 0 80px;
               }
 
               @media only screen and (max-width: 768px) {
@@ -371,18 +375,21 @@
                           padding: 20px 10px;
 
                           .db-widget-item {
+                            opacity: 0;
+                            scale: 1.1;
                             width: 100%;
                             min-height: 50px;
-
-                            // opacity: 0;
-                            // scale: 0.5;
-                            // translate: 0 1000px;
                           }
                         }
 
                         &:nth-of-type(1) {
                           max-width: 425px;
                           min-width: 425px;
+
+                          @media only screen and (max-width: 480px) {
+                            max-width: 350px;
+                            min-width: 350px;
+                          }
                         }
 
                         &:nth-of-type(2) {
@@ -391,6 +398,11 @@
 
                           @media only screen and (max-width: 1366px) {
                             max-width: 425px;
+                          }
+
+                          @media only screen and (max-width: 480px) {
+                            max-width: 350px;
+                            min-width: 350px;
                           }
                         }
                       }
@@ -410,6 +422,14 @@
                     display: none;
                     max-width: unset;
                     min-width: unset;
+                  }
+
+                  @media only screen and (max-width: 1366px) {
+                    display: block;
+                  }
+
+                  @media only screen and (max-width: 1080px) {
+                    display: none;
                   }
 
                   .db-socials-list {
@@ -489,12 +509,99 @@
 
     &.--animate-now {
       .db-container {
+        opacity: 1;
+        scale: 1.0;
+
         .db-row {
           .db-col {
             &:nth-of-type(1) {
               h1 {
                 animation:
                   fade-in 200ms ease-in-out 0ms;
+              }
+            }
+
+            &:nth-of-type(2) {
+              > .db-inner-row {
+                > .db-inner-col {
+                  &:nth-of-type(1) {
+                    .db-widget-container {
+                      .db-widget-row {
+                        .db-widget-col {
+                          .db-widget-list {
+                            .db-widget-item {
+                              animation:
+                                zoom-out 1s forwards cubic-bezier(0.86, 0, 0.07, 1),
+                                fade-in 1s forwards cubic-bezier(0.86, 0, 0.07, 1);
+                            }
+                          }
+
+                          &:nth-of-type(1) {
+                            .db-widget-list {
+                              .db-widget-item {
+                                &:nth-of-type(1) {
+                                  animation-delay: 200ms, 200ms;
+                                }
+
+                                &:nth-of-type(2) {
+                                  animation-delay: 400ms, 400ms;
+                                }
+
+                                &:nth-of-type(3) {
+                                  animation-delay: 600ms, 600ms;
+                                }
+
+                                &:nth-of-type(4) {
+                                  animation-delay: 800ms, 800ms;
+                                }
+
+                                &:nth-of-type(5) {
+                                  animation-delay: 1000ms, 1000ms;
+                                }
+
+                                &:nth-of-type(6) {
+                                  animation-delay: 1200ms, 1200ms;
+                                }
+                              }
+                            }
+                          }
+
+                          &:nth-of-type(2) {
+                            .db-widget-list {
+                              .db-widget-item {
+                                &:nth-of-type(1) {
+                                  animation-delay: 300ms, 300ms;
+                                }
+
+                                &:nth-of-type(2) {
+                                  animation-delay: 500ms, 500ms;
+                                }
+
+                                &:nth-of-type(3) {
+                                  animation-delay: 700ms, 700ms;
+                                }
+
+                                &:nth-of-type(4) {
+                                  animation-delay: 900ms, 900ms;
+                                }
+
+                                &:nth-of-type(5) {
+                                  animation-delay: 1100ms, 1100ms;
+                                }
+
+                                &:nth-of-type(6) {
+                                  animation-delay: 1300ms, 1300ms;
+                                }
+                              }
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+
+                  &:nth-of-type(2) {}
+                }
               }
             }
           }
