--- a/assets/theme.css
+++ b/assets/theme.css
@@ -633,12 +633,22 @@ ul, ol {
 }
 
 .db-section--about-us-banner {
-  background-image: url("AboutUs__asset-bg-v01.png");
+  background-image: url("About-Us__asset-bg-v01.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   object-fit: cover;
   padding-top: 256px;
+}
+@media only screen and (max-width: 768px) {
+  .db-section--about-us-banner {
+    padding-top: 150px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-banner {
+    padding-top: 100px;
+  }
 }
 .db-section--about-us-banner .db-container .title-wrap {
   max-width: 795px;
@@ -647,8 +657,16 @@ ul, ol {
 .db-section--about-us-banner .db-container .title-wrap h1 {
   text-align: center;
 }
-.db-section--about-us-banner .db-container .title-wrap h1 span:nth-child(1) {
-  color: var(--primaryColor);
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-banner .db-container .title-wrap h1 {
+    display: flex;
+    justify-content: center;
+    column-gap: 10px;
+    flex-wrap: wrap;
+    row-gap: 10px;
+  }
+}
+.db-section--about-us-banner .db-container .title-wrap h1 span {
   text-align: center;
   font-family: var(--primaryFontFamily);
   font-size: 88px;
@@ -658,14 +676,22 @@ ul, ol {
   /* 88px */
   letter-spacing: -3.52px;
 }
-.db-section--about-us-banner .db-container .title-wrap h1 span:nth-child(2) {
+@media only screen and (max-width: 768px) {
+  .db-section--about-us-banner .db-container .title-wrap h1 span {
+    font-size: 60px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-banner .db-container .title-wrap h1 span {
+    font-size: 50px;
+    letter-spacing: -2px;
+  }
+}
+.db-section--about-us-banner .db-container .title-wrap h1 span:nth-child(1) {
   color: var(--secondaryColor);
-  font-family: var(--primaryFontFamily);
-  font-size: 88px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 100%;
-  letter-spacing: -3.52px;
+}
+.db-section--about-us-banner .db-container .title-wrap h1 span:nth-child(2) {
+  color: var(--primaryColor);
 }
 .db-section--about-us-banner .db-container .title-wrap h4 {
   color: #FFF;
@@ -678,17 +704,41 @@ ul, ol {
   line-height: 150%;
   margin-top: 40px;
 }
+@media only screen and (max-width: 768px) {
+  .db-section--about-us-banner .db-container .title-wrap h4 {
+    font-size: 20px;
+    max-width: 500px;
+    margin-inline: auto;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-banner .db-container .title-wrap h4 {
+    font-size: 16px;
+    margin-top: 19px;
+    max-width: 375px;
+    width: 100%;
+    min-width: 310px;
+  }
+}
 .db-section--about-us-banner .db-container .db-row {
-  background-image: url("AboutUs__asset-banner.png");
-  background-position: center;
+  background-image: url("About-Us__asset-banner.png");
+  background-position: left;
   background-repeat: no-repeat;
   background-size: cover;
   object-fit: cover;
-  height: 634px;
   border-radius: 30px;
   border: 10px solid #242031;
   box-shadow: 0px 30px 50px 0px rgba(0, 0, 0, 0.4);
   margin-top: 96px;
+  position: relative;
+}
+@media only screen and (max-width: 768px) {
+  .db-section--about-us-banner .db-container .db-row {
+    background-image: url("About-Us__asset-mb-banner.png");
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 .db-section--about-us-banner .db-container .db-row .db-col-spacer {
   padding-top: 49px;
@@ -700,18 +750,49 @@ ul, ol {
   align-items: flex-start;
   column-gap: 130px;
 }
+@media only screen and (max-width: 1080px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer {
+    column-gap: 60px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer {
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+  }
+}
 .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(1) {
   max-width: 316px;
   width: 100%;
 }
 .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(1) .db-logo-container {
   max-width: 316px;
-  height: 118px;
+  min-width: 230px;
+  width: 100%;
 }
 .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(1) .db-logo-container img {
   display: block;
   object-fit: cover;
   width: 100%;
+}
+.db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) {
+  position: relative;
+  z-index: 5;
+}
+@media only screen and (max-width: 768px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+    margin-top: 54px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) {
+    row-gap: 14px;
+  }
 }
 .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-its-year {
   color: #FFF;
@@ -723,12 +804,31 @@ ul, ol {
   font-weight: 700;
   line-height: 100%;
 }
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-its-year {
+    align-self: flex-start;
+  }
+}
 .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-content-block {
   display: flex;
   column-gap: 38px;
   align-items: center;
   justify-content: flex-start;
   margin-top: -15px;
+}
+@media only screen and (max-width: 1440px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-content-block {
+    column-gap: 28px;
+    flex-wrap: wrap;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-content-block {
+    justify-content: center;
+    row-gap: 35px;
+    column-gap: 38px;
+    margin-top: 0px;
+  }
 }
 .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-content-block .db-banner-2069 {
   text-align: right;
@@ -745,6 +845,21 @@ ul, ol {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+@media only screen and (max-width: 1440px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-content-block .db-banner-2069 {
+    font-size: 200px;
+  }
+}
+@media only screen and (max-width: 1080px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-content-block .db-banner-2069 {
+    font-size: 160px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-content-block .db-banner-2069 {
+    font-size: 157px;
+  }
 }
 .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-content-block .db-banner-and {
   text-align: center;
@@ -770,12 +885,37 @@ ul, ol {
   /* 64px */
   letter-spacing: -1.92px;
   max-width: 226px;
+  min-width: 226px;
+}
+@media only screen and (max-width: 1440px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-content-block .db-banner-rock-the-world {
+    font-size: 50px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-content-block .db-banner-rock-the-world {
+    max-width: 226px;
+    font-size: 64px;
+  }
 }
 .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured {
   display: flex;
   column-gap: 40px;
   margin-top: 77px;
   justify-content: flex-end;
+}
+@media only screen and (max-width: 1180px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured {
+    flex-wrap: wrap;
+    row-gap: 40px;
+    justify-content: center;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured {
+    margin-top: 81px;
+    row-gap: 23px;
+  }
 }
 .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured .db-banner-featured-item {
   display: flex;
@@ -786,6 +926,11 @@ ul, ol {
   background: #2B1830;
   padding: 34px 28px 33px 31px;
 }
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured .db-banner-featured-item .featured-item-content {
+    padding: 13px 16px;
+  }
+}
 .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured .db-banner-featured-item .featured-item-content .featured-item-title {
   color: #FFF;
   font-family: var(--primaryFontFamily);
@@ -793,6 +938,12 @@ ul, ol {
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured .db-banner-featured-item .featured-item-content .featured-item-title {
+    font-size: 17px;
+    max-width: 194px;
+  }
 }
 .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured .db-banner-featured-item .featured-item-content .featured-item-description {
   color: #CAC7D0;
@@ -806,13 +957,45 @@ ul, ol {
   /* 20.8px */
   letter-spacing: -0.64px;
 }
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured .db-banner-featured-item .featured-item-content .featured-item-description {
+    font-size: 11px;
+    max-width: 152px;
+  }
+}
 .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured .db-banner-featured-item .featured-item-image {
-  width: 113px;
+  max-width: 113px;
+  width: 100%;
+  min-width: 113px;
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured .db-banner-featured-item .featured-item-image {
+    max-width: 127px;
+    width: 100%;
+    height: 128px;
+    min-width: 127px;
+  }
 }
 .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured .db-banner-featured-item .featured-item-image img {
-  display: block;
   object-fit: cover;
   width: 100%;
+  height: 100%;
+}
+.db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured .db-banner-featured-item .featured-item-image img:nth-child(1) {
+  display: block;
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured .db-banner-featured-item .featured-item-image img:nth-child(1) {
+    display: none;
+  }
+}
+.db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured .db-banner-featured-item .featured-item-image img:nth-child(2) {
+  display: none;
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-banner .db-container .db-row .db-col-spacer .db-col:nth-child(2) .db-banner-featured .db-banner-featured-item .featured-item-image img:nth-child(2) {
+    display: block;
+  }
 }
 
 .db-section--about-us-after-life {
@@ -820,8 +1003,18 @@ ul, ol {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 1900px;
   position: relative;
+  height: 1900px;
+}
+@media only screen and (max-width: 768px) {
+  .db-section--about-us-after-life {
+    height: auto;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-after-life {
+    background-image: url("About-Us__asset-mb-bg-v02.png");
+  }
 }
 .db-section--about-us-after-life .db-background-overlay {
   position: absolute;
@@ -829,7 +1022,7 @@ ul, ol {
   background-blend-mode: color-dodge;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   height: 1120px;
   left: 0;
   right: 0;
@@ -837,6 +1030,11 @@ ul, ol {
 }
 .db-section--about-us-after-life .db-container {
   padding-top: 213px;
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-after-life .db-container {
+    padding-top: 122px;
+  }
 }
 .db-section--about-us-after-life .db-container .title-wrap h2 {
   color: #FFF;
@@ -849,15 +1047,37 @@ ul, ol {
   /* 80px */
   letter-spacing: -3.2px;
 }
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-after-life .db-container .title-wrap h2 {
+    font-size: 50px;
+    letter-spacing: -2px;
+  }
+}
 .db-section--about-us-after-life .db-container .db-row {
   flex-direction: column;
   justify-content: space-between;
   margin-top: 70px;
 }
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-after-life .db-container .db-row {
+    margin-top: 34px;
+  }
+}
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) {
   display: flex;
   column-gap: 70px;
   justify-content: center;
+}
+@media only screen and (max-width: 1080px) {
+  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) {
+    flex-wrap: wrap;
+    row-gap: 70px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) {
+    row-gap: 34px;
+  }
 }
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(1) {
   color: #CAC7D0;
@@ -871,6 +1091,21 @@ ul, ol {
   letter-spacing: -0.64px;
   max-width: 351px;
 }
+@media only screen and (max-width: 1080px) {
+  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(1) {
+    order: 2;
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(1) {
+    order: 0;
+    max-width: 350px;
+    width: 100%;
+    min-width: 350px;
+    text-align: left;
+  }
+}
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(2) {
   color: #CAC7D0;
   text-align: center;
@@ -883,6 +1118,14 @@ ul, ol {
   letter-spacing: -0.64px;
   max-width: 460px;
 }
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(2) {
+    max-width: 350px;
+    width: 100%;
+    min-width: 350px;
+    text-align: left;
+  }
+}
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(3) {
   color: #CAC7D0;
   font-family: var(--secondaryFontFamily);
@@ -894,8 +1137,36 @@ ul, ol {
   letter-spacing: -0.64px;
   max-width: 350px;
 }
+@media only screen and (max-width: 1080px) {
+  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(3) {
+    text-align: center;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(1) .db-inner-row:nth-child(3) {
+    max-width: 350px;
+    width: 100%;
+    min-width: 350px;
+    text-align: left;
+  }
+}
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) {
   margin-top: 658px;
+}
+@media only screen and (max-width: 1080px) {
+  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) {
+    margin-top: 420px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) {
+    margin-top: 250px;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) {
+    margin-top: 150px;
+  }
 }
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .db-the-natives-title {
   text-align: center;
@@ -945,6 +1216,24 @@ ul, ol {
   scroll-behavior: smooth;
   scrollbar-width: none;
 }
+@media only screen and (max-width: 1440px) {
+  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel {
+    max-width: 1000px;
+    grid-auto-columns: 47.619047619%;
+    margin-inline: auto;
+  }
+}
+@media only screen and (max-width: 1080px) {
+  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel {
+    max-width: 500px;
+    grid-auto-columns: 100%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel {
+    margin-top: 34px;
+  }
+}
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel::-webkit-scrollbar {
   display: none;
 }
@@ -964,6 +1253,9 @@ ul, ol {
   border: 1.108px solid rgba(62, 62, 62, 0.4);
   background: rgba(0, 0, 0, 0.2);
   transition: transform 0.1s linear;
+}
+.db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card:nth-child(3n) .card-wrapper .db-natives-image-container {
+  left: 0;
 }
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card .card-wrapper {
   padding-top: 75px;
@@ -999,13 +1291,14 @@ ul, ol {
 }
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card .card-wrapper .db-natives-image-container img {
   display: block;
+  width: 100%;
   object-fit: cover;
   height: 100%;
 }
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card .card-wrapper .db-natives-profile {
   display: flex;
   flex-direction: column;
-  max-width: 213px;
+  max-width: 175px;
   row-gap: 19px;
   position: relative;
   z-index: 2;
@@ -1045,6 +1338,17 @@ ul, ol {
 }
 .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .db-buttons-slider .buttons .svg-icon-prev:hover > path, .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .db-buttons-slider .buttons .svg-icon-next:hover > path {
   fill: #AA27B1;
+}
+
+.db-section--spacer {
+  background-color: #0F051B;
+  height: 200px;
+  width: 100%;
+}
+@media only screen and (max-width: 1080px) {
+  .db-section--spacer {
+    height: 50px;
+  }
 }
 
 .db-section--about-us-resurrection {
