--- a/templates/page.about-us.liquid
+++ b/templates/page.about-us.liquid
@@ -228,7 +228,7 @@
 
   <section class="db-section db-section--spacer"></section>
 
-  {% comment %} <section class="db-section db-section--about-us-resurrection">
+  <section class="db-section db-section--about-us-resurrection">
     <div class="db-container">
       <div class="db-row">
 
@@ -337,7 +337,7 @@
         </div>
       </div>
     </div>
-  </section> {% endcomment %}
+  </section>
 </main>
 
 <script>
