--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -29,6 +29,8 @@
 
     <div id="root" class="db-site">
 
+      {% render 'site-loader' %}
+
       {% render 'header' %}
 
       {{ content_for_layout }}
