--- a/templates/page.about-us.liquid
+++ b/templates/page.about-us.liquid
@@ -150,6 +150,7 @@
                   <div class="db-natives-image-container">
                    <div class="db-natives-image">
                     <img src="{{ 'About-Us__asset-natives-v01.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
+                    <img src="{{ 'About-Us__asset-mb-natives-v02.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
                   </div>
                   </div>
 
@@ -170,6 +171,7 @@
                   <div class="db-natives-image-container">
                   <div class="db-natives-image">
                     <img src="{{ 'About-Us__asset-natives-v02.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
+                    <img src="{{ 'About-Us__asset-mb-natives-v02.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
                   </div>
                   </div>
 
@@ -191,6 +193,7 @@
                   <div class="db-natives-image-container">
                     <div class="db-natives-image">
                       <img src="{{ 'About-Us__asset-natives-v03.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
+                      <img src="{{ 'About-Us__asset-mb-natives-v03.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
                     </div>
                   </div>
 
@@ -226,9 +229,10 @@
     </div>
   </section>
 
-  <section class="db-section db-section--spacer"></section>
+  {% comment %} <section class="db-section db-section--spacer"></section> {% endcomment %}
 
-  <section class="db-section db-section--about-us-resurrection">
+
+  {% comment %} <section class="db-section db-section--about-us-resurrection">
     <div class="db-container">
       <div class="db-row">
 
@@ -338,6 +342,43 @@
       </div>
     </div>
   </section>
+
+  <section class="db-section db-section--about-us-subscribe">
+    <div class="db-container">
+      <div class="db-row">
+        <div class="db-col">
+          <img src="{{ 'About-Us__asset-subscribe-v01.png' | asset_url }}" />
+          <img src="{{ 'About-Us__asset-mb-subscribe-v01.png' | asset_url }}" />
+        </div>
+
+        <div class="db-col">
+
+          <div class="subscribe-title">
+            <h4>
+              CREATE THE STORY WORLD
+            </h4>
+
+            <div class="subscribe-benefit">
+              Get updated to our exciting promotions, limited offers, articles and resources.
+            </div>
+          </div>
+
+          <form action="">
+            <div class="form-control">
+              <input type="email" name="email" id="email" aria-label="email" placeholder="Enter Your Email Address" autocomplete="off" />
+              <button>SUBSCRIBE</button>
+            </div>
+
+            <svg xmlns="http://www.w3.org/2000/svg" width="607" height="2" viewBox="0 0 607 2" fill="none">
+              <path d="M1 1H606" stroke="white" stroke-width="2" stroke-linecap="round"/>
+            </svg>
+          </form>
+
+        </div>
+      </div>
+    </div>
+  </section> {% endcomment %}
+
 </main>
 
 <script>
@@ -363,10 +404,33 @@
       const carousel = this.$refs.carousel;
       const arrowBtns = this.$refs.buttons.querySelectorAll("svg");
       const carouselChildrens = [...carousel.children];
+      let cardPerView;
 
-      this.settingSlider.firstCardWidth = carousel.querySelector(".native-card").offsetWidth + 44;
+      console.log(window.innerWidth);
 
-      let cardPerView = Math.round(carousel.offsetWidth / this.settingSlider.firstCardWidth);
+      if (window.innerWidth <= 768) {
+        // Height
+        this.settingSlider.firstCardWidth = carousel.querySelector(".native-card").offsetHeight + 40;
+        console.log(this.settingSlider.firstCardWidth);
+      } else {
+        // Width
+        this.settingSlider.firstCardWidth = carousel.querySelector(".native-card").offsetWidth + 44;
+      }
+
+      // mao ni sya ma change
+      // this.settingSlider.firstCardWidth = carousel.querySelector(".native-card").offsetWidth + 44;
+
+      if (window.innerWidth <= 768) {
+        // Height
+        cardPerView = Math.round(carousel.offsetHeight / this.settingSlider.firstCardWidth);
+        console.log(cardPerView)
+      } else {
+        // Width
+        cardPerView = Math.round(carousel.offsetWidth / this.settingSlider.firstCardWidth);
+      }
+      
+      // mao ni sya ma change
+      // cardPerView = Math.round(carousel.offsetWidth / this.settingSlider.firstCardWidth);
 
       carouselChildrens.slice(-cardPerView).reverse().forEach(card => {
           carousel.insertAdjacentHTML("afterbegin", card.outerHTML);
@@ -377,15 +441,31 @@
       });
 
       carousel.classList.add("no-transition");
-      carousel.scrollLeft = carousel.offsetWidth + 44;
+
+      if (window.innerWidth <= 768) {
+        // Height
+        carousel.scrollTop = carousel.offsetHeight + 40;
+      } else {
+        // Width
+        carousel.scrollLeft = carousel.offsetWidth + 44;
+      }
+
+      // mao ni sya ma change
+      // carousel.scrollLeft = carousel.offsetWidth + 44;
       carousel.classList.remove("no-transition");
 
       const dragStop = () => {
         this.settingSlider.isDragging = false;
         carousel.classList.remove("dragging");
       }
-     
+
+      // change pani
+      const handleWindowResize = () => {
+        console.log(window.innerWidth);
+      }
+
       document.addEventListener("mouseup", dragStop);
+      window.addEventListener('resize', handleWindowResize);
       // this.autoPlay();
     },
     computed:{
@@ -396,27 +476,64 @@
 
         if (arrow === 'right') {
           this.inActiveButton = 'right';
-          carousel.scrollLeft = carousel.scrollLeft + this.settingSlider.firstCardWidth;
+
+          if (window.innerWidth <= 768) {
+            // Height
+            carousel.scrollTop = carousel.scrollTop + this.settingSlider.firstCardWidth;
+          } else {
+            // Width
+            carousel.scrollLeft = carousel.scrollLeft + this.settingSlider.firstCardWidth;
+          }
+
+          // carousel.scrollLeft = carousel.scrollLeft + this.settingSlider.firstCardWidth;
 
         } else if (arrow === 'left') {
           this.inActiveButton = 'left';
-          carousel.scrollLeft = carousel.scrollLeft - this.settingSlider.firstCardWidth;
+
+          if (window.innerWidth <= 768) {
+            // Height
+            carousel.scrollTop = carousel.scrollTop - this.settingSlider.firstCardWidth;
+          } else {
+            // Width
+            carousel.scrollLeft = carousel.scrollLeft - this.settingSlider.firstCardWidth;
+          }
+          
+          // carousel.scrollLeft = carousel.scrollLeft - this.settingSlider.firstCardWidth;
         }
       },
       onInfiniteScroll() {
         const carousel = this.$refs.carousel;
 
         // If the carousel is at the beginning, scroll to the end
-        if(carousel.scrollLeft === 0) {
-          carousel.classList.add("no-transition");
-          carousel.scrollLeft = carousel.scrollWidth - (2 * carousel.offsetWidth + 40);
-          carousel.classList.remove("no-transition");
-        }
-          // If the carousel is at the end, scroll to the beginning
-        else if(Math.ceil(carousel.scrollLeft) === carousel.scrollWidth - carousel.offsetWidth) {
-          carousel.classList.add("no-transition");
-          carousel.scrollLeft = carousel.offsetWidth + 40;
-          carousel.classList.remove("no-transition");
+
+        if (window.innerWidth <= 768) {
+          // Height
+          if(carousel.scrollTop === 0) {
+            carousel.classList.add("no-transition");
+            carousel.scrollTop = carousel.scrollHeight - (2 * carousel.offsetHeight + 44);
+            carousel.classList.remove("no-transition");
+          }
+            // If the carousel is at the end, scroll to the beginning
+          else if(Math.ceil(carousel.scrollTop) === carousel.scrollHeight - carousel.offsetHeight) {
+            carousel.classList.add("no-transition");
+            carousel.scrollTop = carousel.offsetHeight + 44;
+            carousel.classList.remove("no-transition");
+          }
+
+        } else {
+
+          // Width
+          if(carousel.scrollLeft === 0) {
+            carousel.classList.add("no-transition");
+            carousel.scrollLeft = carousel.scrollWidth - (2 * carousel.offsetWidth + 40);
+            carousel.classList.remove("no-transition");
+          }
+            // If the carousel is at the end, scroll to the beginning
+          else if(Math.ceil(carousel.scrollLeft) === carousel.scrollWidth - carousel.offsetWidth) {
+            carousel.classList.add("no-transition");
+            carousel.scrollLeft = carousel.offsetWidth + 40;
+            carousel.classList.remove("no-transition");
+          }
         }
 
         // Clear existing timeout & start autoplay if mouse is not hovering over carousel
