slider mobile and refactor afterlife

--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -1,5 +1,5 @@
-<footer class="db-footer site-footer">
-  {% comment %} <section class="db-section db-section--newsletter">
+{% comment %} <footer class="db-footer site-footer">
+  <section class="db-section db-section--newsletter">
     <div class="db-container">
       <div class="db-row">
         <div class="db-col">
@@ -107,5 +107,5 @@
         &copy; 2023 Deadbeat - All rights reserved
       </p>
     </div>
-  </section> {% endcomment %}
-</footer>
+  </section>
+</footer> {% endcomment %}
