--- a/templates/page.about-us.liquid
+++ b/templates/page.about-us.liquid
@@ -93,7 +93,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
@@ -123,7 +122,7 @@
 
         </div>
 
-        <div class="db-col">
+        <div class="db-col" v-if="!isMobile">
 
           <div class="db-the-natives-title">
             <h3>
@@ -224,13 +223,116 @@
             </div>
           </div>
 
+        </div> 
+      </div>
+    </div>
+  </section>
+
+  <section class="db-section db-section--about-us-mb-slider" v-if="isMobile">
+    <div class="db-container">
+      <div class="db-row">
+        <div class="db-the-natives-title">
+            <h3>
+              <span>
+                THE STORY:
+              </span>
+
+              <span>
+                THE NATIVES
+              </span>
+            </h3>
+
+            <h3>
+              Main Characters
+            </h3>
+            
+        </div>
+
+        <div class="wrapper" ref="secondaryWrapper">
+          <ul class="carousel" ref="secondaryCarousel">
+            <li class="native-card">
+                <div class="card-wrapper">
+                  <div class="db-natives-image-container">
+                   <div class="db-natives-image">
+                    <img src="{{ 'About-Us__asset-natives-v01.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
+                    <img src="{{ 'About-Us__asset-mb-natives-v02.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
+                  </div>
+                  </div>
+
+                  <div class="db-natives-profile">
+                    <div class="db-native-name">
+                      EVILIA GRIMSHAW
+                    </div>
+
+                    <div class="db-native-description">
+                      Soul-sucking’ station programmer.  Known lovingly at the station as Little Miss Evil, Evilia’s sarcasm, bottom-line attitude and biting wit often clashes with Roger’s rebellious spirit creating a constant source of comedic conflict.
+                    </div>
+                  </div>
+                </div>
+            </li>
+
+            <li class="native-card">
+                <div class="card-wrapper">
+                  <div class="db-natives-image-container">
+                  <div class="db-natives-image">
+                    <img src="{{ 'About-Us__asset-natives-v02.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
+                    <img src="{{ 'About-Us__asset-mb-natives-v02.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
+                  </div>
+                  </div>
+
+                  <div class="db-natives-profile">
+                    <div class="db-native-name">
+                      CHAZ NITELY
+                    </div>
+
+                    <div class="db-native-description">
+                      Late night talk-show host whose topics often center around Apocalypse Conspiracy Theories, Alien Encounters, and Government Cover-ups. Chaz has a huge following as well as a huge ego that barely fits into the rundown studio.
+                    </div>
+                  </div>
+                </div>
+                
+            </li>
+
+            <li class="native-card">
+                <div class="card-wrapper">
+                  <div class="db-natives-image-container">
+                    <div class="db-natives-image">
+                      <img src="{{ 'About-Us__asset-natives-v03.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
+                      <img src="{{ 'About-Us__asset-mb-natives-v03.png' | asset_url }}" alt="" draggable="true" @dragstart="onPreventDrag($event)">
+                    </div>
+                  </div>
+
+                  <div class="db-natives-profile">
+                    <div class="db-native-name">
+                      HARMONY BRIGGS
+                    </div>
+
+                    <div class="db-native-description">
+                      The new-to-town station programmer. Harmony is a somewhat mysterious and enigmatic figure that’s breathed a new life into the musty radio station as well as Roger.
+                    </div>
+                  </div>
+                </div> 
+            </li>
+          </ul>
+        </div>
+
+        <div class="db-buttons-slider">
+            <div class="buttons" ref="buttons">
+
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="21" viewBox="0 0 12 21" fill="none" class="svg-icon-prev db-svg" id="left" @click="onChangeMbSlider('left')" >
+                <path d="M0 10.9646C0 11.4615 0.248704 11.9584 0.497409 12.2068L8.70466 20.4056C9.45078 21.1509 10.6943 21.1509 11.4404 20.4056C12.1865 19.6603 12.1865 18.418 11.4404 17.6727L4.72539 10.9646L11.4404 4.25653C12.1865 3.51118 12.1865 2.26895 11.4404 1.52361C10.6943 0.778263 9.45078 0.778263 8.70466 1.52361L0.746114 9.47392C0.248705 9.97081 0 10.4677 0 10.9646Z" fill="#CAC7D0" :style="{fillOpacity: inActiveButton !== 'left' ? 0.4 : ''}"/>
+              </svg>
+
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="21" viewBox="0 0 12 21" fill="none" class="svg-icon-next db-svg" id="right" @click="onChangeMbSlider('right')">
+                <path d="M12 10.9646C12 11.4615 11.7513 11.9584 11.5026 12.2068L3.29534 20.4056C2.54922 21.1509 1.3057 21.1509 0.559586 20.4056C-0.186529 19.6603 -0.186529 18.418 0.559586 17.6727L7.27461 10.9646L0.559586 4.25653C-0.186529 3.51118 -0.186529 2.26895 0.559586 1.52361C1.3057 0.778263 2.54922 0.778263 3.29534 1.52361L11.2539 9.47392C11.7513 9.97081 12 10.4677 12 10.9646Z" fill="#CAC7D0" :style="{fillOpacity: inActiveButton !== 'right' ? 0.4 : ''}"/>
+              </svg>
+            </div>
         </div>
       </div>
     </div>
   </section>
 
-  {% comment %} <section class="db-section db-section--spacer"></section> {% endcomment %}
-
+  <section class="db-section db-section--spacer"></section>
 
   {% comment %} <section class="db-section db-section--about-us-resurrection">
     <div class="db-container">
@@ -393,27 +495,155 @@
           isAutoPlay: true,
           startX:null,
           startScrollLeft:null,
+          sliderX1440:false,
+          sliderX1080:false,
+          sliderX768:false,
         },
-        timeoutId:null
+        timeoutId:null,
+        isMobile: false,
       }
     },
-    created() {},
+    created() {
+
+      if (window.innerWidth <= 768) {
+        this.isMobile = true
+      } else{
+        this.isMobile = false
+      }
+    },
     mounted() {
       console.log('HELLO WORLD MARCO YOU ARE IN VUE');
       const wrapper = this.$refs.wrapper;
       const carousel = this.$refs.carousel;
-      const arrowBtns = this.$refs.buttons.querySelectorAll("svg");
-      const carouselChildrens = [...carousel.children];
+      const secondaryWrapper = this.$refs.secondaryWrapper;
+      const secondaryCarousel = this.$refs.secondaryCarousel;
+      let carouselChildren;
+      let secondaryCarouselChildren;
       let cardPerView;
+
+      const arrowBtns = this.$refs.buttons.querySelectorAll("svg");
+      
+      if (window.innerWidth <= 768) {
+        secondaryCarouselChildren = [...secondaryCarousel.children];
+      } else {
+        carouselChildrens = [...carousel.children];
+      }
+      
 
       console.log(window.innerWidth);
 
+      const debounce = (func, delay) => {
+        let timeoutId;
+        return function (...args) {
+          clearTimeout(timeoutId);
+
+          timeoutId = setTimeout(() => {
+            func.apply(this, args);
+          }, delay);
+        };
+      }
+
+      // change pani
+      const handleWindowResize = () => {
+      
+        console.log(`I am in`)
+        if (window.innerWidth > 1441) {
+          const carousel = this.$refs.carousel;
+          const children = carousel.children;
+          const totalChildren = children.length;
+          let cardView = null;
+          console.log(`I am in the greater window`);
+          
+          
+          this.settingSlider.firstCardWidth = carousel.querySelector(".native-card").offsetWidth + 44;
+
+          carousel.classList.add("no-transition");
+          carousel.scrollLeft = carousel.offsetWidth + 44;
+          carousel.classList.remove("no-transition");
+
+        }
+
+        if (window.innerWidth >= 1439) {
+          const carousel = this.$refs.carousel;
+          const children = carousel.children;
+          const totalChildren = children.length;
+          let cardView = null;
+          console.log(`I am in the 1440px window`);
+          
+
+          
+          this.settingSlider.firstCardWidth = carousel.querySelector(".native-card").offsetWidth + 44;
+
+          cardPerView = Math.round(carousel.offsetWidth / this.settingSlider.firstCardWidth);
+          
+          if (!this.sliderX1440) {
+            
+          }
+
+          carousel.classList.add("no-transition");
+          carousel.scrollLeft = carousel.offsetWidth + 44;
+          carousel.classList.remove("no-transition");
+
+          
+        }
+
+        if (window.innerWidth >= 1079) {
+          console.log(`I am in the 1080px window`);
+          this.isMobile = false;
+          const carousel = this.$refs.carousel;
+          const children = carousel.children;
+          const totalChildren = children.length;
+
+          
+          this.settingSlider.firstCardWidth = carousel.querySelector(".native-card").offsetWidth + 44;
+
+          carousel.classList.add("no-transition");
+          carousel.scrollLeft = carousel.offsetWidth + 44;
+          carousel.classList.remove("no-transition");
+        }
+
+        
+        if (window.innerWidth > 768) {
+          console.log(`I am in the 768px window`);
+          this.isMobile = false;
+          const carousel = this.$refs.carousel;
+          const children = carousel.children;
+          const totalChildren = children.length;
+
+          
+          this.settingSlider.firstCardWidth = carousel.querySelector(".native-card").offsetWidth + 44;
+
+          carousel.classList.add("no-transition");
+          carousel.scrollLeft = carousel.offsetWidth + 44;
+          carousel.classList.remove("no-transition");
+        }
+
+        if (window.innerWidth <= 768) {
+          console.log(`I am in the lower window`);
+          this.isMobile = true;
+          const carousel = this.$refs.secondaryCarousel;
+          const children = carousel.children;
+          const totalChildren = children.length;
+          
+
+          this.settingSlider.firstCardWidth = carousel.querySelector(".native-card").offsetHeight + 40;
+
+          carousel.classList.add("no-transition");
+          carousel.scrollTop = carousel.offsetHeight + 40;
+          carousel.classList.remove("no-transition");
+        }
+        
+        
+      } 
+
       if (window.innerWidth <= 768) {
         // Height
-        this.settingSlider.firstCardWidth = carousel.querySelector(".native-card").offsetHeight + 40;
+        
+        this.settingSlider.firstCardWidth = secondaryCarousel.querySelector(".native-card").offsetHeight + 40;
         console.log(this.settingSlider.firstCardWidth);
       } else {
         // Width
+        
         this.settingSlider.firstCardWidth = carousel.querySelector(".native-card").offsetWidth + 44;
       }
 
@@ -422,8 +652,8 @@
 
       if (window.innerWidth <= 768) {
         // Height
-        cardPerView = Math.round(carousel.offsetHeight / this.settingSlider.firstCardWidth);
-        console.log(cardPerView)
+        cardPerView = Math.round(secondaryCarousel.offsetHeight / this.settingSlider.firstCardWidth);
+        console.log(cardPerView);
       } else {
         // Width
         cardPerView = Math.round(carousel.offsetWidth / this.settingSlider.firstCardWidth);
@@ -431,39 +661,53 @@
       
       // mao ni sya ma change
       // cardPerView = Math.round(carousel.offsetWidth / this.settingSlider.firstCardWidth);
-
-      carouselChildrens.slice(-cardPerView).reverse().forEach(card => {
-          carousel.insertAdjacentHTML("afterbegin", card.outerHTML);
-      });
-
-      carouselChildrens.slice(0, cardPerView).forEach(card => {
-          carousel.insertAdjacentHTML("beforeend", card.outerHTML);
-      });
-
-      carousel.classList.add("no-transition");
-
+      
       if (window.innerWidth <= 768) {
-        // Height
-        carousel.scrollTop = carousel.offsetHeight + 40;
+
+        secondaryCarouselChildren.slice(-cardPerView).reverse().forEach(card => {
+          secondaryCarousel.insertAdjacentHTML("afterbegin", card.outerHTML);
+        });
+
+        secondaryCarouselChildren.slice(0, cardPerView).forEach(card => {
+            secondaryCarousel.insertAdjacentHTML("beforeend", card.outerHTML);
+        });
+
       } else {
-        // Width
-        carousel.scrollLeft = carousel.offsetWidth + 44;
+
+        carouselChildrens.slice(-cardPerView).reverse().forEach(card => {
+          carousel.insertAdjacentHTML("afterbegin", card.outerHTML);
+        });
+
+        carouselChildrens.slice(0, cardPerView).forEach(card => {
+            carousel.insertAdjacentHTML("beforeend", card.outerHTML);
+        });
+
       }
 
-      // mao ni sya ma change
-      // carousel.scrollLeft = carousel.offsetWidth + 44;
-      carousel.classList.remove("no-transition");
+      
+      if (window.innerWidth <= 768) {
+        // Height
+          secondaryCarousel.classList.add("no-transition");
+          secondaryCarousel.scrollTop = secondaryCarousel.offsetHeight + 40;
+          secondaryCarousel.classList.remove("no-transition");
+        } else {
+          // Width
+          carousel.classList.add("no-transition");
+          carousel.scrollLeft = carousel.offsetWidth + 44;
+          carousel.classList.remove("no-transition");
+      }
+
 
       const dragStop = () => {
+        if (window.innerWidth <= 768) {
+          return;
+        }
+
         this.settingSlider.isDragging = false;
         carousel.classList.remove("dragging");
       }
 
-      // change pani
-      const handleWindowResize = () => {
-        console.log(window.innerWidth);
-      }
-
+      const debouncedResizeHandler = debounce(handleWindowResize, 300);
       document.addEventListener("mouseup", dragStop);
       window.addEventListener('resize', handleWindowResize);
       // this.autoPlay();
@@ -473,51 +717,61 @@
     methods:{
       onChangeSlider(arrow) {
         const carousel = this.$refs.carousel;
-
         if (arrow === 'right') {
           this.inActiveButton = 'right';
-
-          if (window.innerWidth <= 768) {
-            // Height
-            carousel.scrollTop = carousel.scrollTop + this.settingSlider.firstCardWidth;
-          } else {
             // Width
-            carousel.scrollLeft = carousel.scrollLeft + this.settingSlider.firstCardWidth;
-          }
+          carousel.scrollLeft = carousel.scrollLeft + this.settingSlider.firstCardWidth;
 
           // carousel.scrollLeft = carousel.scrollLeft + this.settingSlider.firstCardWidth;
 
-        } else if (arrow === 'left') {
-          this.inActiveButton = 'left';
+        }
 
-          if (window.innerWidth <= 768) {
-            // Height
-            carousel.scrollTop = carousel.scrollTop - this.settingSlider.firstCardWidth;
-          } else {
+        if (arrow === 'left') {
+          this.inActiveButton = 'left';
             // Width
-            carousel.scrollLeft = carousel.scrollLeft - this.settingSlider.firstCardWidth;
-          }
+          carousel.scrollLeft = carousel.scrollLeft - this.settingSlider.firstCardWidth;
+        }
+          
+          // carousel.scrollLeft = carousel.scrollLeft - this.settingSlider.firstCardWidth;
+        
+      },
+      onChangeMbSlider(arrow) {
+        const secondaryCarousel = this.$refs.secondaryCarousel;
+        if (arrow === 'right') {
+          this.inActiveButton = 'right';      
+            // Height
+          secondaryCarousel.scrollTop = secondaryCarousel.scrollTop + this.settingSlider.firstCardWidth;
+          
+
+          // carousel.scrollLeft = carousel.scrollLeft + this.settingSlider.firstCardWidth;
+
+        } 
+        
+        if (arrow === 'left') {
+          this.inActiveButton = 'left';
+            // Height
+          secondaryCarousel.scrollTop = secondaryCarousel.scrollTop - this.settingSlider.firstCardWidth;
           
           // carousel.scrollLeft = carousel.scrollLeft - this.settingSlider.firstCardWidth;
         }
       },
       onInfiniteScroll() {
         const carousel = this.$refs.carousel;
-
+        const secondaryCarousel = this.$refs.secondaryCarousel;
         // If the carousel is at the beginning, scroll to the end
 
         if (window.innerWidth <= 768) {
           // Height
-          if(carousel.scrollTop === 0) {
-            carousel.classList.add("no-transition");
-            carousel.scrollTop = carousel.scrollHeight - (2 * carousel.offsetHeight + 44);
-            carousel.classList.remove("no-transition");
+          if(secondaryCarousel.scrollTop === 0) {
+            secondaryCarousel.classList.add("no-transition");
+            secondaryCarousel.scrollTop = secondaryCarousel.scrollHeight - (2 * secondaryCarousel.offsetHeight + 44);
+            secondaryCarousel.classList.remove("no-transition");
           }
             // If the carousel is at the end, scroll to the beginning
-          else if(Math.ceil(carousel.scrollTop) === carousel.scrollHeight - carousel.offsetHeight) {
-            carousel.classList.add("no-transition");
-            carousel.scrollTop = carousel.offsetHeight + 44;
-            carousel.classList.remove("no-transition");
+          else if(Math.ceil(secondaryCarousel.scrollTop) === secondaryCarousel.scrollHeight - secondaryCarousel.offsetHeight) {
+            secondaryCarousel.classList.add("no-transition");
+            secondaryCarousel.scrollTop = secondaryCarousel.offsetHeight + 44;
+            secondaryCarousel.classList.remove("no-transition");
           }
 
         } else {
@@ -525,11 +779,12 @@
           // Width
           if(carousel.scrollLeft === 0) {
             carousel.classList.add("no-transition");
-            carousel.scrollLeft = carousel.scrollWidth - (2 * carousel.offsetWidth + 40);
+            carousel.scrollLeft = carousel.scrollWidth - (2 * carousel.offsetWidth) + 40;
             carousel.classList.remove("no-transition");
           }
             // If the carousel is at the end, scroll to the beginning
           else if(Math.ceil(carousel.scrollLeft) === carousel.scrollWidth - carousel.offsetWidth) {
+            
             carousel.classList.add("no-transition");
             carousel.scrollLeft = carousel.offsetWidth + 40;
             carousel.classList.remove("no-transition");
