improvement: applied feedbacks from UI/UX; replace widget images with high-quality; remove glitching of text of homepage h1; disable body scroll when nav menu is clicked/active; adjust the inconsistent of border widgets;

--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -191,6 +191,12 @@
     methods: {
       toggleMenu() {
         this.header.showMenu = !this.header.showMenu;
+        if (this.header.showMenu) {
+          document.querySelector('body').style.overflowY = 'hidden';
+        }
+        else {
+          document.querySelector('body').style.overflowY = 'auto';
+        }
       },
     }
   };
