--- a/snippets/widget--creators.liquid
+++ b/snippets/widget--creators.liquid
@@ -18,9 +18,10 @@
     <img class="db-img-figure-01 db-img"
       alt=""
       title=""
-      src="{{ 'DB_Widget06_figure-v01-203x293.png' | asset_url }}"
+      src="{{ 'DB_Widget08_figure-v02-409x586.png' | asset_url }}"
       width=""
       height=""
+      draggable="false"
       loading="lazy"/>
   </div>
 </div>
