--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -15,9 +15,9 @@
       <div class="db-row">
         <div class="db-col">
           <h1>
-            <span title="Welcome to thess">Welcome to the</span>
-            <span title="DEADBEAT">DEADBEAT&nbsp;</span>
-            <span title="world">world</span>
+            <span>Welcome to the</span>
+            <span>DEADBEAT&nbsp;</span>
+            <span>world</span>
           </h1>
           <p>
             Welcome to the story of deadbeat underworld. A post-apocalyptic world devoid of the living.
