--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -138,29 +138,6 @@
                   @media only screen and (max-width: 768px) {
                     font-size: 60px;
                   }
-
-                  &::before,
-                  &::after {
-                    content: attr(title);
-                    color: inherit;
-                    font-family: inherit;
-                    font-size: inherit;
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                  }
-
-                  &::before {
-                    animation: glitchTop 1s linear infinite;
-                    -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
-                    clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
-                  }
-
-                  &::after {
-                    animation: glitchBotom 1.5s linear infinite;
-                    -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
-                    clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
-                  }
                 }
 
                 &:nth-of-type(3) {
@@ -176,29 +153,6 @@
                   
                   @media only screen and (max-width: 768px) {
                     font-size: 60px;
-                  }
-
-                  &::before,
-                  &::after {
-                    content: attr(title);
-                    color: inherit;
-                    font-family: inherit;
-                    font-size: inherit;
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                  }
-
-                  &::before {
-                    animation: glitchTop 1s linear infinite;
-                    -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
-                    clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
-                  }
-
-                  &::after {
-                    animation: glitchBotom 1.5s linear infinite;
-                    -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
-                    clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
                   }
                 }
               }
@@ -453,19 +407,19 @@
       }
     }
 
-    &::after {
-      content: '';
-      position: absolute;
-      z-index: 3;
-      top: unset;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      display: block;
-      background: linear-gradient(0deg, #0E0914 0%, rgba(14, 9, 20, 0.00) 100%);
-      width: 100%;
-      height: 160px;
-    }
+    // &::after {
+    //   content: '';
+    //   position: absolute;
+    //   z-index: 3;
+    //   top: unset;
+    //   right: 0;
+    //   bottom: 0;
+    //   left: 0;
+    //   display: block;
+    //   background: linear-gradient(0deg, #0E0914 0%, rgba(14, 9, 20, 0.00) 100%);
+    //   width: 100%;
+    //   height: 160px;
+    // }
 
     &.--animate-now {
       .db-container {
