--- a/styles/db-theme/_widget.scss
+++ b/styles/db-theme/_widget.scss
@@ -1,30 +1,46 @@
 .db-widget-item {
+  padding: 3px;
+  user-select: none;
+
   .db-widget-box {
     transition:
       box-shadow 200ms ease-in-out 0ms,
-      border 200ms ease-in-out 0ms,
       scale 200ms ease-in-out 0ms !important;
   }
 
   &.--year-2069 {
     .db-widget-box {
+      position: relative;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-end;
-      background-image: url('DB_Widget01_bg-v01-407x385.jpg');
+      background-image: url('DB_Widget01_bg-v02-814x770.jpg');
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-      box-shadow: unset;
       height: 385px;
       padding: 25px 37px;
       scale: 1.0;
-      border: 3px solid transparent;
       border-radius: 30px;
 
       @media only screen and (max-width: 768px) {
         padding: 25px;
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        inset: 0;
+        display: block;
+        box-shadow: unset;
+        width: 100%;
+        height: 100%;
+        border: 3px solid transparent;
+        border-radius: inherit;
+        transition:
+          all 200ms ease-in-out 0ms;
       }
 
       .year-wrap {
@@ -123,13 +139,16 @@
       }
 
       &:hover {
-        box-shadow:
-          2px 2px 2px 0px rgba(181, 34, 235, 0.30),
-          -2px -2px 2px 0px rgba(181, 34, 235, 0.30),
-          1px 1px 2px 0px rgba(181, 34, 235, 0.30) inset,
-          1px 1px 2px 0px rgba(181, 34, 235, 0.30) inset;
         scale: 1.05;
-        border-color: #D47FF3;
+
+        &::before {
+          box-shadow:
+            4.07796px 4.07796px 8.15591px #B522EB4D,
+            -4.07796px -4.07796px 8.15591px #B522EB4D,
+            2.03898px 2.03898px 4.07796px #D86EFF99,
+            -2.03898px -2.03898px 4.07796px #D86EFF99;
+          border-color: #D47FF3;
+        }
       }
     }
   }
@@ -220,7 +239,7 @@
 
   &.--discover-collect {
     .db-widget-box {
-      background-image: url('DB_Widget03_bg-v01-407x350.jpg');
+      background-image: url('DB_Widget03_bg-v02-814x700.jpg');
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -228,11 +247,26 @@
       height: 350px;
       padding: 27px 60px;
       scale: 1.0;
-      border: 3px solid transparent;
+      border: none;
       border-radius: 30px;
 
       @media only screen and (max-width: 768px) {
         padding: 25px 40px;
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        inset: 0;
+        display: block;
+        box-shadow: unset;
+        width: 100%;
+        height: 100%;
+        border: 3px solid transparent;
+        border-radius: inherit;
+        transition:
+          all 200ms ease-in-out 0ms;
       }
 
       h5 {
@@ -245,13 +279,16 @@
       }
 
       &:hover {
-        box-shadow:
-          4.07796px 4.07796px 8.15591px 0px rgba(255, 255, 255, 0.30),
-          -4.07796px -4.07796px 8.15591px 0px rgba(255, 255, 255, 0.30),
-          2.03898px 2.03898px 4.07796px 0px rgba(255, 255, 255, 0.60),
-          -2.03898px -2.03898px 4.07796px 0px rgba(255, 255, 255, 0.60);
         scale: 1.05;
-        border-color: $whiteColor;
+
+        &::before {
+          box-shadow:
+            4.07796px 4.07796px 8.15591px 0px rgba(255, 255, 255, 0.30),
+            -4.07796px -4.07796px 8.15591px 0px rgba(255, 255, 255, 0.30),
+            2.03898px 2.03898px 4.07796px 0px rgba(255, 255, 255, 0.60),
+            -2.03898px -2.03898px 4.07796px 0px rgba(255, 255, 255, 0.60);
+          border: 3px solid $whiteColor;
+        }
       }
     }
   }
@@ -259,24 +296,43 @@
   &.--merch {
     .db-widget-box {
       display: block;
-      background-image: url('DB_Widget04_bg-v01-407x290.jpg');
+      background-image: url('DB_Widget04_bg-v02-814x580.png');
       background-position: center;
       background-repeat: no-repeat;
       background-color: transparent;
+      background-size: cover;
       box-shadow: unset;
       height: 290px;
       scale: 1.0;
-      border: 3px solid transparent;
+      border: none;
       border-radius: 30px;
 
+      &::before {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        inset: 0;
+        display: block;
+        box-shadow: unset;
+        width: 100%;
+        height: 100%;
+        border: 3px solid transparent;
+        border-radius: inherit;
+        transition:
+          all 200ms ease-in-out 0ms;
+      }
+
       &:hover {
-        box-shadow:
-          4.07796px 4.07796px 8.15591px 0px rgba(255, 255, 255, 0.30),
-          -4.07796px -4.07796px 8.15591px 0px rgba(255, 255, 255, 0.30),
-          2.03898px 2.03898px 4.07796px 0px rgba(255, 255, 255, 0.60),
-          -2.03898px -2.03898px 4.07796px 0px rgba(255, 255, 255, 0.60);
         scale: 1.05;
-        border-color: #D86FFF;
+
+        &::before {
+          box-shadow:
+            4.07796px 4.07796px 8.15591px 0px rgba(181, 34, 235, 0.30),
+            -4.07796px -4.07796px 8.15591px 0px rgba(181, 34, 235, 0.30),
+            2.03898px 2.03898px 4.07796px 0px rgba(216, 110, 255, 0.60),
+            -2.03898px -2.03898px 4.07796px 0px rgba(216, 110, 255, 0.60);
+          border: 3px solid #D86FFF;
+        }
       }
     }
   }
@@ -284,7 +340,7 @@
   &.--roadmap {
     .db-widget-box {
       display: block;
-      background-image: url('DB_Widget05_bg-v01-407x196.jpg');
+      background-image: url('DB_Widget05_bg-v01-814x392.jpg');
       background-position: center;
       background-repeat: no-repeat;
       background-color: transparent;
@@ -294,8 +350,23 @@
       height: 195px;
       padding: 20px;
       scale: 1.0;
-      border: 3px solid transparent;
+      border: none;
       border-radius: 30px;
+
+      &::before {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        inset: 0;
+        display: block;
+        box-shadow: unset;
+        width: 100%;
+        height: 100%;
+        border: 3px solid transparent;
+        border-radius: inherit;
+        transition:
+          all 200ms ease-in-out 0ms;
+      }
 
       h5 {
         font-family: $primaryFontFamily;
@@ -329,20 +400,24 @@
       }
 
       &:hover {
-        box-shadow:
-          4.07796px 4.07796px 8.15591px 0px rgba(181, 34, 235, 0.30),
-          -4.07796px -4.07796px 8.15591px 0px rgba(181, 34, 235, 0.30),
-          2.03898px 2.03898px 4.07796px 0px rgba(216, 110, 255, 0.60),
-          -2.03898px -2.03898px 4.07796px 0px rgba(216, 110, 255, 0.60);
         scale: 1.05;
-        border-color: #D86FFF;
+
+        &::before {
+          box-shadow:
+            4.07796px 4.07796px 8.15591px 0px rgba(181, 34, 235, 0.30),
+            -4.07796px -4.07796px 8.15591px 0px rgba(181, 34, 235, 0.30),
+            2.03898px 2.03898px 4.07796px 0px rgba(216, 110, 255, 0.60),
+            -2.03898px -2.03898px 4.07796px 0px rgba(216, 110, 255, 0.60);
+          border: 3px solid #D86FFF;
+        }
       }
     }
   }
 
   &.--the-beats-radio {
     .db-widget-box {
-      background-image: url('DB_Widget06_bg-v01-262x261.jpg');
+      position: relative;
+      background-image: url('DB_Widget06_bg-v02-524x522.png');
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -350,8 +425,21 @@
       height: 260px;
       padding: 12px 20px;
       scale: 1.0;
-      border: 3px solid transparent;
       border-radius: 30px;
+
+      &::before {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        inset: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        border: 3px solid transparent;
+        border-radius: inherit;
+        transition:
+          all 200ms ease-in-out 0ms;
+      }
 
       .svg-logo-92-nine {
         display: block;
@@ -371,28 +459,45 @@
       }
 
       &:hover {
-        box-shadow:
-          4.07796px 4.07796px 8.15591px 0px rgba(193, 255, 44, 0.30),
-          -4.07796px -4.07796px 8.15591px 0px rgba(193, 255, 44, 0.30),
-          2.03898px 2.03898px 4.07796px 0px rgba(193, 255, 44, 0.60),
-          -2.03898px -2.03898px 4.07796px 0px rgba(193, 255, 44, 0.60);
         scale: 1.05;
-        border-color: #C1FF2C;
+        
+        &::before {
+          box-shadow:
+            4.07796px 4.07796px 8.15591px 0px rgba(193, 255, 44, 0.30),
+            -4.07796px -4.07796px 8.15591px 0px rgba(193, 255, 44, 0.30),
+            2.03898px 2.03898px 4.07796px 0px rgba(193, 255, 44, 0.60),
+            -2.03898px -2.03898px 4.07796px 0px rgba(193, 255, 44, 0.60);
+          border-color: #C1FF2C;
+        }
       }
     }
   }
 
   &.--the-beats-currency {
     .db-widget-box {
-      background-image: url('DB_Widget07_bg-v01-262x255.jpg');
+      background-image: url('DB_Widget07_bg-v01-524x510.jpg');
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
       box-shadow: unset;
       height: 255px;
       padding: 40px 20px;
-      border: 3px solid transparent;
+      border: none;
       border-radius: 30px;
+
+      &::before {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        inset: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        border: 3px solid transparent;
+        border-radius: inherit;
+        transition:
+          all 200ms ease-in-out 0ms;
+      }
 
       span {
         color: rgba(202, 199, 208, 0.80);
@@ -419,20 +524,23 @@
       }
 
       &:hover {
-        box-shadow:
-          4.07796px 4.07796px 8.15591px 0px rgba(181, 34, 235, 0.30),
-          -4.07796px -4.07796px 8.15591px 0px rgba(181, 34, 235, 0.30),
-          2.03898px 2.03898px 4.07796px 0px rgba(216, 110, 255, 0.60),
-          -2.03898px -2.03898px 4.07796px 0px rgba(216, 110, 255, 0.60);
         scale: 1.05;
-        border-color: #D86FFF;
+
+        &::before {
+          box-shadow:
+            4.07796px 4.07796px 8.15591px 0px rgba(181, 34, 235, 0.30),
+            -4.07796px -4.07796px 8.15591px 0px rgba(181, 34, 235, 0.30),
+            2.03898px 2.03898px 4.07796px 0px rgba(216, 110, 255, 0.60),
+            -2.03898px -2.03898px 4.07796px 0px rgba(216, 110, 255, 0.60);
+          border: 3px solid #D86FFF;
+        }
       }
     }
   }
 
   &.--creators {
     .db-widget-box {
-      background-image: url('DB_Widget06_bg-v01-262x563.jpg');
+      background-image: url('DB_Widget08_bg-v01-524x1126.jpg');
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -440,8 +548,22 @@
       height: auto;
       scale: 1.0;
       padding: 32px 33px 0;
-      border: 3px solid transparent;
+      border: none;
       border-radius: 30px;
+
+      &::before {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        inset: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        border: 3px solid transparent;
+        border-radius: inherit;
+        transition:
+          all 200ms ease-in-out 0ms;
+      }
 
       > span {
         color: #0E003D;
@@ -484,20 +606,23 @@
       }
 
       &:hover {
-        box-shadow:
-          4.02237px 4.02237px 8.04474px 0px rgba(193, 255, 44, 0.30),
-          -4.02237px -4.02237px 8.04474px 0px rgba(193, 255, 44, 0.30),
-          2.01118px 2.01118px 4.02237px 0px rgba(193, 255, 44, 0.60),
-          -2.01118px -2.01118px 4.02237px 0px rgba(193, 255, 44, 0.60);
         scale: 1.05;
-        border-color: #C1FF2C;
+
+        &::before {
+          box-shadow:
+            4.02237px 4.02237px 8.04474px 0px rgba(193, 255, 44, 0.30),
+            -4.02237px -4.02237px 8.04474px 0px rgba(193, 255, 44, 0.30),
+            2.01118px 2.01118px 4.02237px 0px rgba(193, 255, 44, 0.60),
+            -2.01118px -2.01118px 4.02237px 0px rgba(193, 255, 44, 0.60);
+          border: 3px solid #C1FF2C;
+        }
       }
     }
   }
 
   &.--marketplace {
     .db-widget-box {
-      background-image: url('DB_Widget07_bg-v01-262x244.jpg');
+      background-image: url('DB_Widget09_bg-v01-524x487.jpg');
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
@@ -505,8 +630,22 @@
       height: 243px;
       padding: 32px 40px;
       scale: 1.0;
-      border: 3px solid transparent;
+      border: none;
       border-radius: 30px;
+
+      &::before {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        inset: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        border: 3px solid transparent;
+        border-radius: inherit;
+        transition:
+          all 200ms ease-in-out 0ms;
+      }
 
       h5 {
         color: #373249;
@@ -519,13 +658,16 @@
       }
 
       &:hover {
-        box-shadow:
-          4.07796px 4.07796px 8.15591px 0px rgba(255, 255, 255, 0.30),
-          -4.07796px -4.07796px 8.15591px 0px rgba(255, 255, 255, 0.30),
-          2.03898px 2.03898px 4.07796px 0px rgba(255, 255, 255, 0.60),
-          -2.03898px -2.03898px 4.07796px 0px rgba(255, 255, 255, 0.60);
         scale: 1.05;
-        border-color: $whiteColor;
+
+        &::before {
+          box-shadow:
+            4.07796px 4.07796px 8.15591px 0px rgba(255, 255, 255, 0.30),
+            -4.07796px -4.07796px 8.15591px 0px rgba(255, 255, 255, 0.30),
+            2.03898px 2.03898px 4.07796px 0px rgba(255, 255, 255, 0.60),
+            -2.03898px -2.03898px 4.07796px 0px rgba(255, 255, 255, 0.60);
+          border: 3px solid $whiteColor;
+        }
       }
     }
   }
