--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -10,6 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
+    <!-- Favicon -->
+    <link rel="icon" href="{{ 'DB_favicon.png' | asset_url }}" type="image/x-icon">
+
     {{ content_for_header }}
 
     <!-- Deadbeat Theme | CSS -->
